Remove analytics and cookies.js

--- a/theme/pydelhi/templates/base.html
+++ b/theme/pydelhi/templates/base.html
@@ -135,12 +135,11 @@
     </div><!-- /#wrapper -->
 
     <footer id="contentinfo" class="footer">
-        {% include "cookies.html" %}
+        {# {% include "cookies.html" %} #}
     </footer><!-- /#contentinfo -->
 
-    {% include "analytics.html" %}
     <script src="{{ SITEURL }}/theme/js/jquery-1.11.1.min.js"></script>
-    <script src="{{ SITEURL }}/theme/js/cookies.js"></script>
+    {# <script src="{{ SITEURL }}/theme/js/cookies.js"></script> #}
 
 </body>
 </html>
