Update blog description

--- a/theme/pydelhi/templates/base.html
+++ b/theme/pydelhi/templates/base.html
@@ -4,7 +4,7 @@
     <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
     {% block head %}
     <meta charset="utf-8" />
-    <meta name="description" content="Free. Open Source. Powerful. Taiga is a project management platform for startups and agile developers & designers">
+    <meta name="description" content="Python Delhi User Group (PyDelhi), is a local community of Python Programming language in Northern India.">
     <meta name="author" content="{{ AUTHOR }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
