--- a/theme/pydelhi/templates/base.html
+++ b/theme/pydelhi/templates/base.html
@@ -59,7 +59,7 @@
         <div class="bg"></div>
         <div class="wrapper">
             <a class="logo" href="{{ SITEURL }}/">
-                <img class="logo" src="{{ SITEURL }}/theme/images/logo-color.png" alt="Taiga">
+                <img class="logo" src="{{ SITEURL }}/theme/images/logo-color.png" alt="PyDelhi">
             </a>
             <h1 class="title">
                 <a href="{{ SITEURL }}/">{{ SITENAME }}</a>
