--- a/theme/pydelhi/templates/share.html
+++ b/theme/pydelhi/templates/share.html
@@ -3,7 +3,7 @@
         <a class="twitter-share-button"
            href="https://twitter.com/share"
            data-url="{{ SITEURL }}/{{ article.url }}"
-           data-via="taigaio"
+           data-via="pydelhi"
            data-text="{{ article.title }}"
            data-count="vertical">
             Tweet
