--- a/theme/pydelhi/static/css/modules/post-list.scss
+++ b/theme/pydelhi/static/css/modules/post-list.scss
@@ -2,4 +2,10 @@
     article {
         margin-bottom: 2rem;
     }
+    .entry-content {
+        img {
+            display: block;
+            padding-bottom: 1em;
+        }
+    }
 }
